Refactored lexer challenge to use CLI args for input/output files instead of stdin/stdout since on Windows it is slow. Also this allows for one less wrapper script